Keep non evaluated keys in `Hash#transform_keys!` [Bug #17735]